add remove bg script and adjust human instance segmentation script

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,10 @@
 .ipynb_checkpoints/
+.vscode/
 __MACOSX/
 experiments/
 checkpoints/*
 raccoons/
 segmented_data/
 raccoonsDataset.zip
+removed_bg/
+toDataset/
